removed sidebar index. Change icon image and color for easter egg to attract more attention.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,12 +34,14 @@
   <nav class="flex-column flex-grow-1 w-100 ps-0">
     <ul class="nav">
       <!-- home -->
-      <li class="nav-item{% if page.layout == 'home' %}{{ " active" }}{% endif %}">
+       <!-- NOTICE: Adjustment: removed homepage icon and link, it's not needed since there are no other pages
+        to link to. -->
+      <!-- <li class="nav-item{% if page.layout == 'home' %}{{ " active" }}{% endif %}">
         <a href="{{ '/' | relative_url }}" class="nav-link">
           <i class="fa-fw fas fa-home"></i>
           <span>{{ site.data.locales[include.lang].tabs.home | upcase }}</span>
         </a>
-      </li>
+      </li> -->
       <!-- the real tabs -->
       {% for tab in site.tabs %}
         <li class="nav-item{% if tab.url == page.url %}{{ " active" }}{% endif %}">
@@ -109,7 +111,7 @@
 
         <!-- New fun-feature button -->
     <a href="#" aria-label="Fun Feature" class="btn btn-link nav-link">
-      <i class="fa-solid fa-parachute-box"></i>
+      <i class="fa-solid fa-utensils" style="color: #eb75c7;"></i>
     </a>
 
   </div>
