fixed page formatting for top bullet. Added a few more points and rephrased some other points

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,7 +77,7 @@ tail_includes:
           </em>
 
           <!-- read time -->
-          &bull;
+          &nbsp;&bull;&nbsp;
           {% include read-time.html content=content prompt=true lang=lang %}
         </span>
 
