--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -102,6 +102,7 @@ tail_includes:
 
   <div class="post-tail-wrapper text-muted">
     <!-- categories -->
+    <!-- ADJUSTMENT: Categories tag at the bottom of a post has been removed
     {% if page.categories.size > 0 %}
       <div class="post-meta mb-3">
         <i class="far fa-folder-open fa-fw me-1"></i>
@@ -110,7 +111,7 @@ tail_includes:
           {%- unless forloop.last -%},{%- endunless -%}
         {% endfor %}
       </div>
-    {% endif %}
+    {% endif %} -->
 
     <!-- tags -->
     {% if page.tags.size > 0 %}
