--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -92,7 +92,8 @@
 {% if jekyll.environment == 'production' %}
   <!-- PWA -->
   {% if site.pwa.enabled %}
-    <script defer src="{{ '/assets/js/dist/app.min.js' | relative_url }}"></script>
+    <!-- ADJUSTMEN: used to be app instead of page in the code below -->
+    <script defer src="{{ '/assets/js/dist/page.min.js' | relative_url }}"></script> 
   {% endif %}
 
   <!-- Web Analytics -->
