build: added pusheen functionality

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -95,7 +95,7 @@
     {% endfor %}
 
     <!-- New fun-feature button -->
-    <a href="#" aria-label="Fun Feature" class="btn btn-link nav-link">
+    <a href="#" aria-label="Fun Feature" class="btn btn-link nav-link add-pusheen-button">
       <i class="fa-solid fa-utensils" style="color: #eb75c7;"></i>
     </a>
   </div>
